<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="47dp"
            android:text="其他设备" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="54dp"
            android:layout_toLeftOf="@+id/button2"
            android:text="" />

    </RelativeLayout>
    

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:id="@+id/header_layout"
	    android:visibility="gone"
	    android:layout_gravity="bottom"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal" >
	
	        <TextView
	            android:id="@+id/state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:text="@string/t_idle"
	            android:textSize="20dp" />
	
	        <TextView
	            android:id="@+id/file"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="10dp"
	            android:text=""
	            android:textSize="20dp" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/play"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/s_play" />
	
	        <Button
	            android:id="@+id/pause"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/s_pause" />
	
	        <Button
	            android:id="@+id/stop"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/s_stop" />
	
	        <Button
	            android:id="@+id/next"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/s_next" />
	
	    </LinearLayout>
	
	</LinearLayout>

</LinearLayout>
